--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
   "license": "MIT",
   "scripts": {
     "dev": "vite dev",
-    "build": "vite build"
+    "build": "vite build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "^3.0.1",
+    "@sveltejs/adapter-static": "^3.0.8",
     "@sveltejs/kit": "^2.8.1",
     "@sveltejs/vite-plugin-svelte": "^4.0.1",
     "@sveltepress/theme-default": "^6.0.4",
     "@sveltepress/vite": "^1.2.2",
     "@types/node": "^20.11.20",
+    "gh-pages": "^6.3.0",
     "svelte": "^5.0.0",
     "vite": "^5.1.4"
   }
