--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "deploy:clean": "npm run build && gh-pages -d dist -f"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.8",
