--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sveltepress/vite": "^1.2.2",
     "@types/node": "^20.11.20",
     "gh-pages": "^6.3.0",
+    "mdsvex": "^0.12.6",
     "svelte": "^5.0.0",
     "vite": "^5.1.4"
   }
