--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "packageManager": "pnpm@9.15.0",
   "license": "MIT",
   "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
+    "build:items": "node mc-build.js",
+    "dev": "npm run build:items && vite dev",
+    "build": "npm run build:items && vite build",
     "deploy": "gh-pages -d dist",
     "deploy:clean": "npm run build && gh-pages -d dist -f"
   },
@@ -22,5 +23,8 @@
     "mdsvex": "^0.12.6",
     "svelte": "^5.0.0",
     "vite": "^5.1.4"
+  },
+  "dependencies": {
+    "glob": "^11.0.3"
   }
 }
