--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "packageManager": "pnpm@9.15.0",
   "license": "MIT",
   "scripts": {
-    "build:items": "node mc-build.js",
+    "build:items": "node mc-build-parser.js",
     "dev": "npm run build:items && vite dev",
     "build": "npm run build:items && vite build",
     "deploy": "gh-pages -d dist",
