--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build:items": "node mc-build-parser.js",
     "dev": "npm run build:items && vite dev",
-    "build": "npm run build:items && vite build",
+    "build": "vite build",
     "deploy": "gh-pages -d dist",
     "deploy:clean": "npm run build && gh-pages -d dist -f"
   },
